fixed search bar wrap

--- a/styles/search_bar.css
+++ b/styles/search_bar.css
@@ -1,11 +1,13 @@
 h1 {
-    font-family: 'Roboto';
-    font-style: normal;
     font-weight: bold;
     font-size: 57px;
     line-height: 64px; 
     padding-top: 60px;
     color: #FFFFFF;
+
+    text-align: center;
+
+    margin-bottom: 20px auto;
 }
 
 .button {
@@ -40,6 +42,7 @@ h1 {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    flex-wrap: wrap;
 
     margin: 10px 10px;
     box-shadow: 2px 6px 4px rgba(0, 0, 0, 0.5);
@@ -90,6 +93,8 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
+
+    margin: 10px;
 }
 
 .search_button {
@@ -119,4 +124,16 @@ label {
 
     text-align: center;
     letter-spacing: 0.5px;
+}
+
+select {    
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 8px 3rem;
+    
+    background: #FFFFFF;
+    
+    border: 1px solid #CED4DA;
+    border-radius: 8px;
 }
